@@ -9,6 +9,9 @@
  */
 #include <ws2_32.h>
 
+/*
+ * @implemented
+ */
 ULONG
 EXPORT
 htonl(
@@ -17,6 +20,10 @@ htonl(
   return DH2N(hostlong);
 }
 
+
+/*
+ * @implemented
+ */
 USHORT
 EXPORT
 htons(
@@ -25,6 +32,10 @@ htons(
   return WH2N(hostshort);
 }
 
+
+/*
+ * @implemented
+ */
 ULONG
 EXPORT
 ntohl(
@@ -33,6 +44,10 @@ ntohl(
   return DN2H(netlong);
 }
 
+
+/*
+ * @implemented
+ */
 USHORT
 EXPORT
 ntohs(
